style.css
* {
    background-color: #c6d8d8;
    width: 700px;
    font-family: Verdana, sans-serif;
    margin: 0 auto;
}

h1, h2, h4 {
    margin-bottom: 0px;
}

p, ul, ol {
    margin-top: 5px;
}

ul, ol {
    padding-left: 25px;
}

ul {
    list-style-type: square;
}

li {
    margin-bottom: 10px;
}

.header,
.content,
.content-block {
    margin-top: 20px;
}

.header {
    margin-bottom: 40px;
    margin-left: 2px;
    padding-left: 10px;
    border-left: 4px solid #000000;
}

.link-no-underline {
    text-decoration: none;
    color: black;
}

.link-no-visited:visited {
    color: black;
}

.link-black-underline {
    text-decoration: none;
    color: black;
    border-bottom: 2px solid #000000;
}

.link-hover-yellow-line:hover {
    border-bottom: 2px solid #daff34;
}

.recipe-list {
    list-style-type: none;
    padding-left: 3px;
}

.recipe-list li {
    padding-bottom: 10px;
}

.finished-image {
    height: 200px;
    width: auto;
}

